<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="TValveCmd" Id="{b6cd3d26-d2e9-419e-8ff1-a09c448963d4}">
    <Declaration><![CDATA[TYPE TValveCmd :
STRUCT
		AutCtrl : BOOL;
		ManCtrl : BOOL;
		OpenMan : BOOL;
		StopMan : BOOL;
		CloseMan : BOOL;
		Req2OpenAut : BOOL;
		Req2CloseAut : BOOL;
		ResetSUF : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>